--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
+    "express-fileupload": "^1.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
