--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon node_src/server.js",
-    "start": "nodemon node_src/server.js"
+    "start": "node node_src/server.js"
   },
   "dependencies": {
     "axios": "^1.4.0",
