--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 SERVER_PORT=8080
 
 # DB
-DB_URI=mongodb+srv://ifcloud:cloudif@ifcloud.6kbjzst.mongodb.net
-DB_NAME=ifcloud
+DB_URI=mongodb+srv://rafaelindner:rafael@rafaelindner.u5xbmnw.mongodb.net/
+DB_NAME=myserver
 
 # URL CloudECG
 #CloudECG_URL=http://localhost:8080/baseR4/
