--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,31 @@ certifi==0.0.8
 chardet==1.0.1
 distribute==0.6.24
 gunicorn==0.14.2
-requests==0.11.1
+boto3==1.16.51
+    # via -r requirements.in
+botocore==1.19.51
+    # via
+    #   boto3
+    #   s3transfer
+certifi==2020.12.5
+    # via requests
+chardet==4.0.0
+    # via requests
+idna==2.10
+    # via requests
+jmespath==0.10.0
+    # via
+    #   boto3
+    #   botocore
+python-dateutil==2.8.1
+    # via botocore
+requests==2.25.1
+    # via -r requirements.in
+s3transfer==0.3.3
+    # via boto3
+six==1.15.0
+    # via python-dateutil
+urllib3==1.26.2
+    # via
+    #   botocore
+    #   requests
