Add temp.txt in huff

--- a/.env
+++ b/.env
@@ -1,13 +1,20 @@
+# # Server
+# SERVER_PORT=8080
+
+# # DB
+# DB_URI=mongodb+srv://ifcloud:cloudif@ifcloud.6kbjzst.mongodb.net
+# DB_NAME=ifcloud
+
 # Server
 SERVER_PORT=8080
-
 # DB
-DB_URI=mongodb+srv://ifcloud:cloudif@ifcloud.6kbjzst.mongodb.net
-DB_NAME=ifcloud
+DB_URI=mongodb+srv://jeremiaspiontkoski:hungrygames@cluster0.yis93qk.mongodb.net/
+DB_NAME=Cluster0
 
 # URL CloudECG
-#CloudECG_URL=http://localhost:8080/baseR4/
-CloudECG_URL=http://cloudecg-env.eba-mau7x2gw.us-east-1.elasticbeanstalk.com/baseR4/
+CloudECG_URL=http://localhost:3000/baseR4/
+# CloudECG_URL=http://cloudecg-env.eba-mau7x2gw.us-east-1.elasticbeanstalk.com/baseR4/
+# CloudECG_URL=http://3.137.150.219:8080/baseR4/
 
 # URLs da API
 API_URL=http://localhost:8080
