--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "node_src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon node_src/server.js",
-    "start": "nodemon node_src/server.js"
+    "dev": "nodemon node_src/Server.js",
+    "start": "nodemon node_src/Server.js"
   },
   "dependencies": {
     "axios": "^1.4.0",
