Add requirements.txt and .gitignore

--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ DB_URI=mongodb+srv://jeremiaspiontkoski:hungrygames@cluster0.yis93qk.mongodb.net
 DB_NAME=Cluster0
 
 # URL CloudECG
-CloudECG_URL=http://localhost:3000/baseR4/
+CloudECG_URL=http://18.228.188.160:8080/baseR4/
 # CloudECG_URL=http://cloudecg-env.eba-mau7x2gw.us-east-1.elasticbeanstalk.com/baseR4/
 # CloudECG_URL=http://3.137.150.219:8080/baseR4/
 
