--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 # # Server
 
 # Server
-SERVER_PORT=
+SERVER_PORT=8000
 # DB
-DB_URI=
-DB_NAME=
+DB_URI=mongodb+srv://jeremiaspiontkoski:hungrygames@cluster0.1xva6st.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_NAME=Cluster0
 
 # URL CloudECG
-CloudECG_URL=
+CloudECG_URL=http://localhost:3000/baseR4/
 # CloudECG_URL=http://cloudecg-env.eba-mau7x2gw.us-east-1.elasticbeanstalk.com/baseR4/
 # CloudECG_URL=http://3.137.150.219:8080/baseR4/
 
