iniciando a documentacao do if-cloud

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,8 @@ DB_URI=
 DB_NAME=
 
 
-# URL CloudECG
-CloudECG_URL=
+# URL of CRUD API in FHIR standard
+FHIR_API_URL=
 # URLs da API
 RUN_SCRIPT_BY_SCRIPT_NAME=/ifcloud/run_script/script_name/:script_name
 RUN_SCRIPT_BY_PATIENT_ID=/ifcloud/run_script/patient_id/:id
