atualizando README.md na secao Utilizacao

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,14 @@
-# # Server
-
-# Server
-SERVER_PORT=
-# DB
-DB_URI=
-DB_NAME=
-
-
 # URL of CRUD API in FHIR standard
 FHIR_API_URL=
+
+# Server
+#SERVER_PORT=
+
 # URLs da API
-RUN_SCRIPT_BY_SCRIPT_NAME=/ifcloud/run_script/script_name/:script_name
-RUN_SCRIPT_BY_PATIENT_ID=/ifcloud/run_script/patient_id/:id
-RUN_SCRIPT_BY_EXTENSION_ID=/ifcloud/run_script/observation_id/:id
-RUN_SCRIPT_BY_OPERATION=/ifcloud/run_script/operation/operation_name
+#RUN_SCRIPT_BY_SCRIPT_NAME=/ifcloud/run_script/script_name/:script_name
+#RUN_SCRIPT_BY_PATIENT_ID=/ifcloud/run_script/patient_id/:id
+#RUN_SCRIPT_BY_EXTENSION_ID=/ifcloud/run_script/observation_id/:id
+#RUN_SCRIPT_BY_OPERATION=/ifcloud/run_script/operation/operation_name
 
 # URLs da UI
 HOME_PAGE=home
